syntax = "proto3";
package sf.xrpl.type.v1;

option go_package = "github.com/xrpl-commons/firehose-xrpl/pb/sf/xrpl/type/v1;pbxrpl";

import "google/protobuf/timestamp.proto";

// Common type imports
import "sf/xrpl/type/v1/signer.proto";

// Transaction type imports
import "sf/xrpl/type/v1/payment.proto";
import "sf/xrpl/type/v1/offer.proto";
import "sf/xrpl/type/v1/trustline.proto";
import "sf/xrpl/type/v1/account.proto";
import "sf/xrpl/type/v1/escrow.proto";
import "sf/xrpl/type/v1/nft.proto";
import "sf/xrpl/type/v1/payment_channel.proto";
import "sf/xrpl/type/v1/check.proto";
import "sf/xrpl/type/v1/deposit_preauth.proto";
import "sf/xrpl/type/v1/ticket.proto";
import "sf/xrpl/type/v1/clawback.proto";
import "sf/xrpl/type/v1/amm.proto";
import "sf/xrpl/type/v1/did.proto";
import "sf/xrpl/type/v1/oracle.proto";
import "sf/xrpl/type/v1/mptoken.proto";
import "sf/xrpl/type/v1/credential.proto";
import "sf/xrpl/type/v1/permissioned_domain.proto";
import "sf/xrpl/type/v1/delegate.proto";
import "sf/xrpl/type/v1/system.proto";
import "sf/xrpl/type/v1/batch.proto";

// Block represents an XRPL validated ledger
message Block {
  // Ledger sequence number (ledger_index)
  uint64 number = 1;

  // Ledger hash (32 bytes)
  bytes hash = 2;

  // Ledger header information
  Header header = 3;

  // Schema version for this protobuf
  int64 version = 4;

  // Transactions in this ledger
  repeated Transaction transactions = 5;

  // Ledger close time
  google.protobuf.Timestamp close_time = 6;
}

message Header {
  // Parent ledger hash
  bytes parent_hash = 1;

  // Total XRP in drops (int64 for 10^17 max)
  int64 total_drops = 2;

  // Account state hash (state tree root)
  bytes account_hash = 3;

  // Transaction tree hash
  bytes transaction_hash = 4;

  // Close time resolution in seconds
  uint32 close_time_resolution = 5;

  // Close flags
  uint32 close_flags = 6;
}

message Transaction {
  // Transaction hash (32 bytes)
  bytes hash = 1;

  // Transaction result code (e.g., "tesSUCCESS", "tecPATH_DRY", "temMALFORMED")
  // Future-proof: supports any result code XRPL adds without schema updates
  string result = 2;

  // Position in ledger (0-indexed)
  uint32 index = 3;

  // Raw transaction blob (XRPL binary format)
  // Kept for backward compatibility and advanced decoding
  bytes tx_blob = 4;

  // Transaction metadata blob (XRPL binary format)
  // Contains: AffectedNodes, delivered_amount, etc.
  bytes meta_blob = 5;

  // Transaction type string (e.g., "Payment", "OfferCreate", "NFTokenMint")
  // Future-proof: supports any transaction type XRPL adds without schema
  // updates
  string tx_type = 6;

  // Account that initiated this transaction
  string account = 7;

  // Fee paid in drops
  uint64 fee = 8;

  // Transaction sequence number
  uint32 sequence = 9;

  // Hash value identifying another transaction. If provided, this transaction
  // is only valid if the sending account's previously-sent transaction matches
  // the provided hash.
  string account_txn_id = 10;

  // Delegate account that is sending the transaction on behalf of the Account
  string delegate = 11;

  // Set of bit-flags for this transaction
  uint32 flags = 12;

  // Highest ledger index this transaction can appear in
  uint32 last_ledger_sequence = 13;

  // Additional arbitrary information attached to this transaction
  repeated Memo memos = 14;

  // Network ID of the chain this transaction is intended for
  // Required for networks with ID >= 1025, disallowed for ID <= 1024
  uint32 network_id = 15;

  // Multi-signature data (for multi-signed transactions)
  repeated Signer signers = 16;

  // Arbitrary integer used to identify the reason for this payment
  uint32 source_tag = 17;

  // Public key that corresponds to the private key used to sign this
  // transaction Empty string indicates a multi-signature is present in the
  // signers field
  string signing_pub_key = 18;

  // Sequence number of the ticket to use in place of a Sequence number
  // If provided, Sequence must be 0
  uint32 ticket_sequence = 19;

  // Signature that verifies this transaction as originating from the account
  string txn_signature = 20;

  // Decoded transaction details based on tx_type
  oneof tx_details {
    // Payment transactions
    Payment payment = 30;

    // DEX transactions
    OfferCreate offer_create = 40;
    OfferCancel offer_cancel = 41;

    // Trustline
    TrustSet trust_set = 50;

    // Account management
    AccountSet account_set = 60;
    AccountDelete account_delete = 61;
    SetRegularKey set_regular_key = 62;
    SignerListSet signer_list_set = 63;

    // Escrow
    EscrowCreate escrow_create = 70;
    EscrowFinish escrow_finish = 71;
    EscrowCancel escrow_cancel = 72;

    // Payment channels
    PaymentChannelCreate payment_channel_create = 80;
    PaymentChannelFund payment_channel_fund = 81;
    PaymentChannelClaim payment_channel_claim = 82;

    // Checks
    CheckCreate check_create = 90;
    CheckCash check_cash = 91;
    CheckCancel check_cancel = 92;

    // Other account features
    DepositPreauth deposit_preauth = 100;
    TicketCreate ticket_create = 101;

    // NFT transactions
    NFTokenMint nftoken_mint = 110;
    NFTokenBurn nftoken_burn = 111;
    NFTokenCreateOffer nftoken_create_offer = 112;
    NFTokenCancelOffer nftoken_cancel_offer = 113;
    NFTokenAcceptOffer nftoken_accept_offer = 114;
    NFTokenModify nftoken_modify = 115;

    // Clawback
    Clawback clawback = 120;

    // AMM transactions
    AMMCreate amm_create = 130;
    AMMDeposit amm_deposit = 131;
    AMMWithdraw amm_withdraw = 132;
    AMMVote amm_vote = 133;
    AMMBid amm_bid = 134;
    AMMDelete amm_delete = 135;
    AMMClawback amm_clawback = 136;

    // DID transactions
    DIDSet did_set = 140;
    DIDDelete did_delete = 141;

    // Oracle transactions
    OracleSet oracle_set = 150;
    OracleDelete oracle_delete = 151;

    // MPToken transactions
    MPTokenIssuanceCreate mptoken_issuance_create = 160;
    MPTokenIssuanceDestroy mptoken_issuance_destroy = 161;
    MPTokenIssuanceSet mptoken_issuance_set = 162;
    MPTokenAuthorize mptoken_authorize = 163;

    // Credential transactions
    CredentialCreate credential_create = 170;
    CredentialAccept credential_accept = 171;
    CredentialDelete credential_delete = 172;

    // Permissioned domain transactions
    PermissionedDomainSet permissioned_domain_set = 180;
    PermissionedDomainDelete permissioned_domain_delete = 181;

    // Delegate transactions
    DelegateSet delegate_set = 190;

    // Batch transaction
    Batch batch = 200;

    // System transactions (pseudo-transactions)
    EnableAmendment enable_amendment = 900;
    SetFee set_fee = 901;
    UNLModify unl_modify = 902;
    LedgerStateFix ledger_state_fix = 903;
  }
}

// Memo attached to a transaction
message Memo {
  // Arbitrary hex value, conventionally containing the content of the memo
  string memo_data = 1;

  // Hex value representing characters allowed in URLs
  // Conventionally containing information on how the memo is encoded
  string memo_format = 2;

  // Hex value representing characters allowed in URLs
  // Conventionally, a unique relation that defines the format of this memo
  string memo_type = 3;
}
