syntax = "proto3";
package sf.xrpl.type.v1;

option go_package = "github.com/xrpl-commons/firehose-xrpl/pb/sf/xrpl/type/v1;pbxrpl";

import "sf/xrpl/type/v1/amount.proto";

// XChainBridge - Cross-chain bridge specification
message XChainBridge {
  // Door account on locking chain
  string locking_chain_door = 1;

  // Issue on locking chain
  Asset locking_chain_issue = 2;

  // Door account on issuing chain
  string issuing_chain_door = 3;

  // Issue on issuing chain
  Asset issuing_chain_issue = 4;
}

// XChainCreateBridge - Creates a new bridge
// Reference: https://xrpl.org/xchaincreatebrige.html
message XChainCreateBridge {
  // Bridge specification
  XChainBridge xchain_bridge = 1;

  // Reward for attestation signers
  Amount signature_reward = 2;

  // (Optional) Minimum amount for account creation
  Amount min_account_create_amount = 3;
}

// XChainModifyBridge - Modifies bridge parameters
// Reference: https://xrpl.org/xchainmodifybridge.html
message XChainModifyBridge {
  // Bridge specification
  XChainBridge xchain_bridge = 1;

  // (Optional) New signature reward
  Amount signature_reward = 2;

  // (Optional) New minimum for account creation
  Amount min_account_create_amount = 3;
}

// XChainCreateClaimID - Creates a claim ID for cross-chain transfer
// Reference: https://xrpl.org/xchaincreateclaimid.html
message XChainCreateClaimID {
  // Bridge specification
  XChainBridge xchain_bridge = 1;

  // Reward to pay attesters
  Amount signature_reward = 2;

  // Account on source chain initiating transfer
  string other_chain_source = 3;
}

// XChainCommit - Initiates a cross-chain transfer
// Reference: https://xrpl.org/xchaincommit.html
message XChainCommit {
  // Bridge specification
  XChainBridge xchain_bridge = 1;

  // Claim ID from XChainCreateClaimID
  uint64 xchain_claim_id = 2;

  // Amount to transfer
  Amount amount = 3;

  // (Optional) Destination on other chain
  string other_chain_destination = 4;
}

// XChainClaim - Claims transferred funds on destination chain
// Reference: https://xrpl.org/xchainclaim.html
message XChainClaim {
  // Bridge specification
  XChainBridge xchain_bridge = 1;

  // Claim ID
  uint64 xchain_claim_id = 2;

  // Destination account
  string destination = 3;

  // (Optional) Destination tag
  uint32 destination_tag = 4;

  // Amount being claimed
  Amount amount = 5;
}

// XChainAccountCreateCommit - Creates account on destination chain
// Reference: https://xrpl.org/xchainaccountcreatecommit.html
message XChainAccountCreateCommit {
  // Bridge specification
  XChainBridge xchain_bridge = 1;

  // Destination account to create
  string destination = 2;

  // Amount to fund new account
  Amount amount = 3;

  // Reward for attesters
  Amount signature_reward = 4;
}

// XChainAddClaimAttestation - Adds attestation for a claim
// Reference: https://xrpl.org/xchainaddclaimattestation.html
message XChainAddClaimAttestation {
  // Bridge specification
  XChainBridge xchain_bridge = 1;

  // Account attesting to the claim
  string attestation_signer_account = 2;

  // Public key of signer (hex)
  string public_key = 3;

  // Signature (hex)
  string signature = 4;

  // Source account on other chain
  string other_chain_source = 5;

  // Amount being attested
  Amount amount = 6;

  // Account receiving attestation reward
  string attestation_reward_account = 7;

  // Whether transaction was on locking chain
  bool was_locking_chain_send = 8;

  // Claim ID being attested
  uint64 xchain_claim_id = 9;

  // (Optional) Destination account
  string destination = 10;
}

// XChainAddAccountCreateAttestation - Adds attestation for account creation
// Reference: https://xrpl.org/xchainaddaccountcreateattestation.html
message XChainAddAccountCreateAttestation {
  // Bridge specification
  XChainBridge xchain_bridge = 1;

  // Account attesting
  string attestation_signer_account = 2;

  // Public key of signer (hex)
  string public_key = 3;

  // Signature (hex)
  string signature = 4;

  // Source account on other chain
  string other_chain_source = 5;

  // Amount being attested
  Amount amount = 6;

  // Account receiving attestation reward
  string attestation_reward_account = 7;

  // Whether transaction was on locking chain
  bool was_locking_chain_send = 8;

  // Account creation count
  uint64 xchain_account_create_count = 9;

  // Destination account to create
  string destination = 10;

  // Reward for attesters
  Amount signature_reward = 11;
}
